--- a/projects/01_react_dev/03-pizza-menu/src/index.css
+++ b/projects/01_react_dev/03-pizza-menu/src/index.css
@@ -88,14 +88,14 @@ body {
   font-weight: 400;
 }
 
-.pizza p {
+.pizza div p {
   font-size: 1.4rem;
   font-weight: 300;
   font-style: italic;
-  margin-bottom: auto;
+  margin-bottom: 0.2rem;
 }
 
-.pizza span {
+.pizza div span {
   display: block;
   font-size: 1.6rem;
 }
